# legal-claim-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  NAS_DEPLOY.md  README.md  docker-build.sh  pyproject.toml  requirements.txt
data/: prompts.json
data/references/: cbr_key_rates.json
data/smoke_cases/smoke-review/output/: analysis.json  review.json
legal-claim-assistant-deploy/: docker-compose.yml  entrypoint.sh
legal-claim-assistant-deploy/data/references/: arbitration_courts_ru.json
legal-claim-assistant-deploy/src/legal_claim_assistant/: claim_calculation.py  claim_scenario.py  cli.py  config.py  fees.py  ocr.py  openai_client.py  prompt_store.py  prompts.py  readiness.py  reconciliation.py  utils.py  yandex_client.py
legal-claim-assistant-deploy/src/legal_claim_assistant/static/: app.css
src/legal_claim_assistant/: __init__.py  company_lookup.py  config.py  courts.py  docx_builder.py  extraction.py  fact_pack.py  logging_setup.py  models.py  pipeline.py  prompts.py  readiness.py  storage.py  web.py  yandex_client.py
src/legal_claim_assistant/static/: app.js
src/legal_claim_assistant/templates/: index.html  prompts.html
tests/: test_claim_calculation.py  test_docx_cleaning.py  test_readiness.py
