[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-claim-assistant"
version = "0.1.0"
description = "Local assistant for Russian arbitration claim drafting"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.88.0",
  "python-dotenv>=1.0.1",
  "Flask>=3.0.3",
  "python-docx>=1.1.2",
  "PyMuPDF>=1.24.10",
  "pytesseract>=0.3.13",
  "Pillow>=10.4.0",
  "pydantic>=2.8.2",
]

[project.scripts]
legal-claim-assistant = "legal_claim_assistant.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
